--- a/python_ring/ideation.ipynb
+++ b/python_ring/ideation.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
     "dt = 0.01            # Time step\n",
     "T = 1000             # Total number of simulation steps\n",
     "I = np.zeros(N)\n",
-    "I[N // 2 - 2:N // 2 + 3] = 1      # External input (set to zero for now)\n",
+    "I[N // 2 - 2:N // 2 + 3] = 1      # External input in the middle (copied from Enrique)\n",
     "\n",
     "# Initialize activity\n",
     "f = np.random.rand(N) * 1.0e-10  # Small random activity for initialization\n",
