--- a/python_ring/ideation.ipynb
+++ b/python_ring/ideation.ipynb
@@ -483,8 +483,11 @@
     "                if d == 1:\n",
     "                    kernel[neuron_index] = self.D\n",
     "            return kernel\n",
+    "        \n",
+    "        # elif model_type == 'global': TODO: different connectivity for global model, right?\n",
+    "        #     return kernel\n",
     "\n",
-    "    def von_mises(amplitude, kappa, theta, mu): #Their implementation of the function\n",
+    "    def von_mises(amplitude, kappa, theta, mu): #Their implementation of the function (Kim et al. 2017)\n",
     "        if kappa > 5:\n",
     "            return amplitude * np.exp(kappa * (np.cos(theta - mu) - 1))\n",
     "        else:\n",
