--- a/python_ring/ideation.ipynb
+++ b/python_ring/ideation.ipynb
@@ -454,38 +454,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 476,
    "metadata": {},
    "outputs": [],
    "source": [
     "class RingAttractor:\n",
-    "    def __init__(self, num_neurons, tau=1, D=0.1, dt=0.1, T=1000):\n",
+    "    def __init__(self, num_neurons, tau=1, dt=0.1, T=1000):\n",
     "        self.num_neurons = num_neurons\n",
     "        self.tau = tau\n",
-    "        self.D = D\n",
     "        self.dt = dt\n",
     "        self.T = T\n",
     "\n",
     "        #initialize the neurons\n",
     "        self.theta = np.linspace(0, 2 * np.pi, N, endpoint=False)\n",
-    "        #connectivity kernel\n",
-    "        self.kernel = self._connectivity_kernel()\n",
     "        self.f = np.zeros(N) #initial activity profile\n",
     "        self.mu_init = np.pi/2 #initial bump center, we'll say it's always at the front of the fly\n",
-    "\n",
-    "\n",
-    "    def _connectivity_kernel(self, model_type:str):\n",
-    "        \"\"\"This generates the connectivity kernel for each model type\"\"\"\n",
-    "        if model_type == \"local\":\n",
-    "            kernel = np.zeros(self.N) #same size as num_neurons\n",
-    "            for neuron_index in range(self.N):\n",
-    "                d = min(neuron_index, self.N - neuron_index)\n",
-    "                if d == 1:\n",
-    "                    kernel[neuron_index] = self.D\n",
-    "            return kernel\n",
-    "        \n",
-    "        # elif model_type == 'global': TODO: different connectivity for global model, right?\n",
-    "        #     return kernel\n",
     "\n",
     "    def von_mises(amplitude, kappa, theta, mu): #Their implementation of the function (Kim et al. 2017)\n",
     "        if kappa > 5:\n",
@@ -498,6 +481,57 @@
     "        if center is None:\n",
     "            center = self.mu_init\n",
     "        self.f = von_mises(amplitude, kappa, self.theta, center)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 479,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LocalModel(RingAttractor):\n",
+    "    def __init__(self, num_neurons, alpha=3, beta=20, D=0.1):\n",
+    "        super().__init__(num_neurons=num_neurons)\n",
+    "        self.alpha = alpha\n",
+    "        self.beta = beta\n",
+    "        self.D = D\n",
+    "        self.kernel = self._connectivity_kernel()\n",
+    "    \n",
+    "    def _connectivity_kernel(self):\n",
+    "        \"\"\"This generates the connectivity for the local model\"\"\"\n",
+    "        kernel = np.zeros(self.num_neurons) #same size as num_neurons\n",
+    "        for neuron_index in range(self.num_neurons):\n",
+    "            d = min(neuron_index, self.num_neurons - neuron_index)\n",
+    "            if d == 1:\n",
+    "                kernel[neuron_index] = self.D\n",
+    "        return kernel\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 484,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = LocalModel(num_neurons=256)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simulation\n",
+    "\n",
+    "NB pg.11 of supplementary mats: \n",
+    "\n",
+    "global model params:\n",
+    "\n",
+    "$J_0 = -8$, $J_1 = 6$\n",
+    "\n",
+    "Local model params:\n",
+    "\n",
+    "$\\alpha = 3$, $\\beta = 20$, $D = 0.1$\n",
+    "\n"
    ]
   },
   {
