--- a/python_ring/ideation.ipynb
+++ b/python_ring/ideation.ipynb
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +470,7 @@
     "        self.f = np.zeros(N) #initial activity profile\n",
     "        self.mu_init = np.pi/2 #initial bump center, we'll say it's always at the front of the fly\n",
     "\n",
-    "    def von_mises(amplitude, kappa, theta, mu): #Their implementation of the function (Kim et al. 2017)\n",
+    "    def _von_mises(self, amplitude, kappa, theta, mu): #Their implementation of the function (Kim et al. 2017)\n",
     "        if kappa > 5:\n",
     "            return amplitude * np.exp(kappa * (np.cos(theta - mu) - 1))\n",
     "        else:\n",
@@ -480,15 +480,8 @@
     "        \"\"\"Initializes the activity profile via the von Mises function\"\"\"\n",
     "        if center is None:\n",
     "            center = self.mu_init\n",
-    "        self.f = von_mises(amplitude, kappa, self.theta, center)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 479,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        self.f = self._von_mises(self, amplitude, kappa, self.theta, center)\n",
+    "\n",
     "class LocalModel(RingAttractor):\n",
     "    def __init__(self, num_neurons, alpha=3, beta=20, D=0.1):\n",
     "        super().__init__(num_neurons=num_neurons)\n",
@@ -509,11 +502,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = LocalModel(num_neurons=256)"
+    "\n"
    ]
   },
   {
