update readme and plot

--- a/ring_attractor/plotting.ipynb
+++ b/ring_attractor/plotting.ipynb
@@ -368,7 +368,7 @@
     "plt.colorbar(label=\"Neuron Activity\")\n",
     "plt.xlabel(\"Timestep\")\n",
     "plt.ylabel(\"Neuron Index\")\n",
-    "plt.title(\"Damaged Neuron Activities Over Time\")\n",
+    "plt.title(\"Random Damaged Neuron Activities Over Time\")\n",
     "plt.show()"
    ]
   },
