ignore and plotting

--- a/plotting_script.ipynb
+++ b/plotting_script.ipynb
@@ -13,11 +13,9 @@
     "import glob\n",
     "import zipfile\n",
     "\n",
-    "\n",
+    "##Helper functions \n",
     "def find_latest_file(directory):\n",
-    "    \"\"\"\n",
-    "    Find the most recently created or modified file in a given directory.\n",
-    "    \"\"\"\n",
+    "    \"\"\" Find the most recently created or modified file in a given directory.\"\"\"\n",
     "    files = glob.glob(f\"{directory}/*\")  # Get all files in the directory\n",
     "    if not files:\n",
     "        return None\n",
