--- a/simulation_script.ipynb
+++ b/simulation_script.ipynb
@@ -138,26 +138,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.341531"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "params[\"No_Effect\"][60][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [
@@ -1742,6 +1722,17 @@
     "            \n",
     "        # Once the inner loop completes, zip all generated files into the results directory\n",
     "        zip_inner_loop_files(results_dir, zip_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Just jump\n",
+    "ablation_distances = [15, 25, 35, 65, 85, 105, 125, 145, 165, 185]\n",
+    "num_ablated_neurons = [8, 16, 32, 64, 128]"
    ]
   },
   {
